--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_GridViewPartial_DebitoBanco_op.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_GridViewPartial_DebitoBanco_op.cshtml
@@ -27,20 +27,13 @@
         settings.CommandColumn.ShowEditButton = false;
         settings.CommandColumn.ShowDeleteButton = true;
 
-        //CConfiguracion responsive
-
+        //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 800;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 500;
-        settings.Settings.VerticalScrollableHeight = 500;
-        settings.CommandColumn.Width = Unit.Pixel(100);
-        settings.CommandColumn.AdaptivePriority = 1; 
 
         settings.Columns.Add("IdOrdenPago_op","ID").Width = Unit.Percentage(10);
         settings.Columns.Add("Referencia", "# Documento").Width = Unit.Percentage(20);
