--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_LoteFactura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_LoteFactura.cshtml
@@ -8,7 +8,7 @@
         
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
-        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.Control;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
@@ -22,20 +22,13 @@
         settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = false;
         settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
 
-        //CConfiguracion responsive
-
+        //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 800;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 500;
-        settings.Settings.VerticalScrollableHeight = 500;
-        settings.CommandColumn.Width = Unit.Pixel(100);
-        settings.CommandColumn.AdaptivePriority = 1;
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdProducto";
