--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/RevisionContable/_GridViewPartial_Facturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/RevisionContable/_GridViewPartial_Facturacion.cshtml
@@ -22,20 +22,14 @@
         settings.SettingsBehavior.EnableCustomizationWindow = true;
         settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
 
-        //CConfiguracion responsive
 
+        //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 800;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 500;
-        settings.Settings.VerticalScrollableHeight = 500;
-        settings.CommandColumn.Width = Unit.Pixel(100);
-        settings.CommandColumn.AdaptivePriority = 1;
 
         settings.Columns.Add("IdCbteVta", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add("Nombres", "Cliente").Width = Unit.Percentage(30);
