--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_documento_cuotas_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_documento_cuotas_det.cshtml
@@ -22,20 +22,14 @@
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
         settings.Width = Unit.Percentage(100);
-        //CConfiguracion responsive
 
+        //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 800;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
-        settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 500;
-        settings.Settings.VerticalScrollableHeight = 500;
-        settings.CommandColumn.Width = Unit.Pixel(100);
-        settings.CommandColumn.AdaptivePriority = 1;
         settings.Settings.ShowFooter = true;
 
         settings.Columns.Add("Num_cuota","Cuota #").Width=Unit.Percentage(10);
