--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
@@ -14,8 +14,8 @@
 
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdOrdenCompra)
-    @Html.HiddenFor(q => q.IdEstadoAprobacion_cat)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdEstadoAprobacion_cat)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -23,6 +23,29 @@
                     <label for="IdSucursal">Sucursal*</label>
                     @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdEstadoAprobacion_cat">Estado de aprobación*</label>
+                    @Html.DropDownListFor(q => q.IdEstadoAprobacion_cat, new SelectList(ViewBag.lst_apro, "IdCatalogocompra", "Nombre"), new { @class = "form-control", @id = "IdEstadoAprobacion_cat", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(q => q.IdEstadoAprobacion_cat, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdEstado_cierre">Estado de cierre*</label>
+                    @Html.DropDownListFor(q => q.IdEstado_cierre, new SelectList(ViewBag.lst_estado, "IdEstado_cierre", "Descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdEstado_cierre, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdMotivo">Motivo</label>
+                    @Html.DropDownListFor(q => q.IdMotivo, new SelectList(ViewBag.lst_motivo, "IdMotivo", "Descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdMotivo, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-2">
@@ -70,33 +93,11 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdProveedor">Proveedor*</label>
                     @Html.Partial("_CmbProveedor_COM", Model.IdProveedor)
                     @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="IdEstadoAprobacion_cat">Estado de aprobación*</label>
-                    @Html.TextBoxFor(q => q.IdEstadoAprobacion_cat, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.IdEstadoAprobacion_cat, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="IdEstado_cierre">Estado de cierre*</label>
-                    @Html.DropDownListFor(q => q.IdEstado_cierre, new SelectList(ViewBag.lst_estado, "IdEstado_cierre", "Descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdEstado_cierre, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="IdMotivo">Motivo</label>
-                    @Html.DropDownListFor(q => q.IdMotivo, new SelectList(ViewBag.lst_motivo, "IdMotivo", "Descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdMotivo, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -118,14 +119,6 @@
                     @Html.ValidationMessageFor(q => q.IdDepartamento, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="oc_NumDocumento">Número de documento*</label>
-                    @Html.TextBoxFor(q => q.oc_NumDocumento, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.oc_NumDocumento, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdTerminoPago">Termino pago*</label>
