--- a/ERP/Core.Erp.Web/Areas/Compras/Views/ParametrosCompras/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/ParametrosCompras/Index.cshtml
@@ -10,6 +10,15 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "ParametrosCompras", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
     @Html.HiddenFor(q => q.IdEmpresa);
     <div class="row">
         <div class="col-md-12">
