--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
@@ -1,72 +1,64 @@
+@using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridView_aprobacion_oc";
-        settings.CallbackRouteValues = new { Controller = "AprobacionOC", Action = "GridViewPartial_aprobacion_oc" };
-        settings.KeyFieldName = "IdOrdenCompra";
+        settings.CallbackRouteValues = new { Controller = "AprobacionOC", Action = "GridViewPartial_aprobacion_oc", IdSucursal = ViewBag.IdSucursal, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
+        settings.KeyFieldName = "IdSucursal";
+
+        settings.Width = Unit.Percentage(100);
+
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.Settings.ShowFilterRow = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+
+        //Configuración checkbox
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowSelectCheckbox = true;
+        settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
+
+        //Configuración click derecho
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
+
+        //Configuracion responsive
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdOrdenCompra";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.Caption = "# OC";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
-            column.Caption = "*";
-            column.FieldName = "seleccionado";
-            column.ColumnType = MVCxTreeListColumnType.CheckBox;
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Menú";
-            column.FieldName = "info_menu.DescripcionMenu";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(90);
+            column.FieldName = "oc_fecha";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(50
+                );
         });
 
-        settings.SettingsCookies.StoreSelection = true;
-        settings.Settings.GridLines = System.Web.UI.WebControls.GridLines.Both;
-        settings.SettingsPager.Visible = true;
-        settings.SettingsSelection.Enabled = true;
-        settings.Settings.ShowFilterRow = true;
-        settings.Settings.ShowFilterRowMenu = true;
-        settings.SettingsSelection.Recursive = true;
-        settings.SettingsSelection.AllowSelectAll = true;
+
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
         settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
-        settings.DataBound = (s, e) =>
-        {
-            MVCxTreeList tree = s as MVCxTreeList;
-            string bId = ViewData["selectedIDs"] == null ? "" : ViewData["selectedIDs"].ToString();//I have a bId truly
-            if (tree.Nodes.Count == 0) return;
-            if (tree.Nodes[0] == null) return;
-            if (string.IsNullOrEmpty(bId))
-                return;
-            TreeListNodeIterator iterator = tree.CreateNodeIterator();
-            TreeListNode node = iterator.Current;
-            tree.SelectAll();
-            string[] array = ViewData["selectedIDs"].ToString().Split(',');
-            int index = 0;
-            while (node != null)
-            {
-                if (node["IdMenu"] != null)
-                {
-                    if (!string.IsNullOrEmpty(array.FirstOrDefault(q => q == node["IdMenu"].ToString())))
-                    {
-                        node.Selected = Convert.ToBoolean(node["seleccionado"]);
-                    }
-                    else
-                        node.Selected = false;
-                }
 
-                index++;
-                node = iterator.GetNext();
-            }
-        };
+        settings.ClientSideEvents.BeginCallback = "function(s,e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();}";
 
     });
 
-    settings.Columns.Add("IdOrdenCompra");
-    settings.Columns.Add("IdProveedor");
-    settings.Columns.Add("oc_observacion");
-			});
 }
+
 @grid.Bind(Model).GetHtml()
